--- a/BotanicalJourney/Projects/CollaborativeSandbox/package.json
+++ b/BotanicalJourney/Projects/CollaborativeSandbox/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@needle-tools/engine": "file:../../Library/PackageCache/com.needle.engine@2.21.0-pre/package~",
-    "three": "file:../../Library/PackageCache/com.needle.engine@2.21.0-pre/package~/node_modules/three"
+    "three": "file:../../Assets/New%20NpmDef~"
   },
   "devDependencies": {
     "@gltf-transform/cli": "^2.1.7",
