--- a/BotanicalJourney/Projects/CollaborativeSandbox/package.json
+++ b/BotanicalJourney/Projects/CollaborativeSandbox/package.json
@@ -10,9 +10,10 @@
     "pack-gltf": "node node_modules/@needle-tools/engine/plugins/gltf-packer.mjs"
   },
   "dependencies": {
-    "@needle-tools/engine": "file:../../Library/PackageCache/com.needle.engine@2.21.0-pre/package~",
-    "three": "file:../../Library/PackageCache/com.needle.engine@2.21.0-pre/package~/node_modules/three"
-  },
+	  "@needle-tools/engine": "file:../../Library/PackageCache/com.needle.engine@2.21.0-pre/package~",
+	  "three": "file:../../Library/PackageCache/com.needle.engine@2.21.0-pre/package~/node_modules/three",
+	  "new-npmdef": "file:../../Assets/BotanicalJournal/New NpmDef~"
+	},
   "devDependencies": {
     "@gltf-transform/cli": "^2.1.7",
     "@gltf-transform/functions": "^2.1.7",
